dataset1235/2025-2/610742602/users/59982477/executions/906907063_2149359571.log
== SUBMISSION (2025-08-19 20:58:39)
-- CODE: 
Heráclito: 55
Fredegunda: x
Total: 90
print("o valor que Fredegunda pagou foi de: 35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fredegunda: x
                ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fredegunda: x
                ^
NameError: name 'x' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:58:54)
-- CODE: 
Heráclito: 55
Total: 90
print("o valor que Fredegunda pagou foi de: 35")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
o valor que Fredegunda pagou foi de: 35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
o valor que Fredegunda pagou foi de: 35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
